--- a/index.html
+++ b/index.html
@@ -6,11 +6,68 @@
   <link href="css/custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="nav">
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
-      <li role="presentation"><a href="#">Talk</a></li>
-    </ul>
+  <div class="sidebar">
+    <p>text</p>
   </div>
+  <div class="container">
+
+    <div class="nav">
+      <ul class="nav nav-tabs">
+      <!--Left navbar-->
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="#">Talk</a></li>
+      <!--Right navbar-->
+        <li role="presentation" class="active"><a href="#">Read</a></li>
+        <li role="presentation"><a href="#">View Source</a></li>
+        <li role="presentation"><a href="#">View History</a></li>
+      </ul>
+    </div>
+
+      <!-- Header -->
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header">
+            <h2>Welcome to Wikipedia,</h2>
+            <p>the free encyclopedia that anyone can edit.</p>
+            <p>5,512,756 articles in English</p>
+          </div>
+          <div class="portals">
+            <div class="col-md-3">
+              <ul>
+                <li>Arts</li>
+                <li>Biography</li>
+                <li>Geography</li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <ul>
+                <li>History</li>
+                <li>Mathematics</li>
+                <li>Science</li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <ul>
+                <li>Society</li>
+                <li>Technology</li>
+                <li>All Portals</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <p>column1</p>
+      </div>
+      <div class="col-md-8">
+        <p>column2</p>
+      </div>
+    </div>
+
+  </div> <!-- container end -->
 </body>
 </html>
