--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="row">
         <div class="col-md-12">
           <div class="header">
-            <h2>Welcome to Wikipedia,</h2>
-            <p>the free encyclopedia that anyone can edit.</p>
-            <p>5,512,756 articles in English</p>
+            <h2>Welcome to <a href="en.wikipedia.org">Wikipedia</a>,</h2>
+            <p><span class="nonlinks">the</span> free encyclopedia <span class="nonlinks">that</span> anyone can edit.</p>
+            <p>5,512,756 <span class="nonlinks">articles in</span> English</p>
           </div>
           <div class="portals">
             <div class="col-md-3">
