--- a/index.html
+++ b/index.html
@@ -61,10 +61,19 @@
 
     <div class="row">
       <div class="col-md-4">
-        <p>column1</p>
+        <div class="column1">
+
+          <h4 class="subheader">From today's featured article</h4>
+          <img class="feature" src="img/susandollar.png" alt="susan b anthony dollar">
+          <p>coin that was minted from 1979 to 1981, when the series was suspended due to poor public reception, and briefly minted again in 1999</p>
+        </div>
       </div>
+
       <div class="col-md-8">
-        <p>column2</p>
+        <div class="column2">
+          <h4 class="subheader">In the news</h4>
+          <p>column2</p>
+        </div>
       </div>
     </div>
 
