--- a/index.html
+++ b/index.html
@@ -6,23 +6,35 @@
   <link href="css/custom.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="sidebar">
-    <p>text</p>
+
+  <div class="nav">
+    <ul class="nav nav-tabs">
+    <!--Left navbar-->
+      <li role="presentation" class="active"><a href="#">Home</a></li>
+      <li role="presentation"><a href="#">Talk</a></li>
+    <!--Right navbar-->
+      <li role="presentation" class="active"><a href="#">Read</a></li>
+      <li role="presentation"><a href="#">View Source</a></li>
+      <li role="presentation"><a href="#">View History</a></li>
+    </ul>
   </div>
+
+  <!--Sidebar-->
+  <div class="sidebar">
+    <img src="img/logo.jpeg" alt="wikipedia logo">
+    <ul>
+      <li>Main page</li>
+      <li>Contents</li>
+      <li>Featured content</li>
+      <li>Current events</li>
+      <li>Random article</li>
+      <li>Donate to Wikipedia</li>
+      <li>Wikipedia store</li>
+    </ul>
+  </div>
+
+
   <div class="container">
-
-    <div class="nav">
-      <ul class="nav nav-tabs">
-      <!--Left navbar-->
-        <li role="presentation" class="active"><a href="#">Home</a></li>
-        <li role="presentation"><a href="#">Talk</a></li>
-      <!--Right navbar-->
-        <li role="presentation" class="active"><a href="#">Read</a></li>
-        <li role="presentation"><a href="#">View Source</a></li>
-        <li role="presentation"><a href="#">View History</a></li>
-      </ul>
-    </div>
-
       <!-- Header -->
     <div class="jumbotron">
       <div class="row">
@@ -66,16 +78,44 @@
           <h4 class="subheader">From today's featured article</h4>
           <img class="feature" src="img/susandollar.png" alt="susan b anthony dollar">
           <p>coin that was minted from 1979 to 1981, when the series was suspended due to poor public reception, and briefly minted again in 1999</p>
+          <p class="recent"></p>
+          <h4 class="subheader">Did you know...</h4>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </div>
 
       <div class="col-md-8">
         <div class="column2">
           <h4 class="subheader">In the news</h4>
-          <p>column2</p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h4 class="subheader">On this day...</h4>
+          <h6>November 16th</h6>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </div>
     </div>
+
 
   </div> <!-- container end -->
 </body>
