fix jumbotron, add column 3.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="container">
       <!-- Header -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbo">
       <div class="row">
         <div class="col-md-12">
           <div class="header">
@@ -115,6 +115,19 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="column3">
+        <h4 class="subheader">Today's featured picture</h4>
+        <p><img class="feature2" src="img/pool.jpg" alt="susan b anthony dollar"></p>
+        <p>coin that was minted from 1979 to 1981, when the series was suspended due to poor public reception, and briefly minted again in 1999</p>
+        <p class="recent"></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column4">
+      </div>
+    </div>
+
 
 
   </div> <!-- container end -->
