--- a/index.html
+++ b/index.html
@@ -72,46 +72,55 @@
     </div>
 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-7">
         <div class="column1">
 
           <h4 class="subheader">From today's featured article</h4>
           <img class="feature" src="img/susandollar.png" alt="susan b anthony dollar">
-          <p>coin that was minted from 1979 to 1981, when the series was suspended due to poor public reception, and briefly minted again in 1999</p>
+          <p>The Susan B. Anthony dollar is a U.S. dollar coin that was minted from 1979 to 1981, when the series was suspended due to poor public reception, and briefly minted again in 1999. It was proposed as a replacement for the cumbersome Eisenhower dollar. A round planchet with an eleven-sided inner border, acceptable to the vending machine industry (a powerful lobby affecting coin legislation), was chosen for the smaller dollar. Social reformer Susan B. Anthony was selected for the obverse side; on the reverse, the design of the Eisenhower dollar was retained. Both sides of the coin were designed by Frank Gasparro, the Chief Engraver of the United States Mint. The Mint struck 500 million coins, but these entered circulation slowly, in part because of confusion caused by their similarity in size and appearance to the quarter. A final run of these dollar coins was struck in 1999 to compensate for the slow production of the Sacagawea dollar, authorized in 1997. Susan B. Anthony dollars are still plentiful, including many in uncirculated condition, so they hold little extra value for collectors. (Full article...)
+          </p>
+          <p>Recently featured: Bazy Tankersley Ernest Joyce Myriostoma
+            Archive By email More featured articles</p>
           <p class="recent"></p>
           <h4 class="subheader">Did you know...</h4>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>​... that Khufiyya (shrine complex pictured) is the oldest of the four Sufi orders established in China?</li>
+            <li>... that Judith Kingston pioneered the use of chemotherapy to treat retinoblastoma, an eye cancer found in children?</li>
+            <li>... that at a time when masonry bridges were widely being replaced by metal truss bridges, the limestone West Sixth Street Bridge in Austin, Texas, replaced an older iron footbridge?</li>
+            <li>... that Rudolf Geigy established health institutes on two continents and started a foundation that awards scholars who combine field and laboratory work in novel ways?</li>
+            <li>... that the U.S. Army bombarded the village of Wrangell, Alaska, in 1869 to force the handover of the first man to be given the death penalty under U.S. rule?</li>
+            <li>... that Ahlem Belhadj led a march of thousands of women against President Zine El Abidine Ben Ali during the 2011 Tunisian Revolution?</li>
+            <li>... that Kaburakia excelsa, from the west coast of North America, is one of the largest flatworms in the world?</li>
+            <li>... that Helene Bechstein helped to teach Hitler table manners?</li>
           </ul>
+          <p>Recent additions Start a new article Nominate an article</p>
         </div>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-md-5">
         <div class="column2">
           <h4 class="subheader">In the news</h4>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>​Salvator Mundi (pictured), generally attributed to Leonardo da Vinci, sells at auction for US$450.3 million, a new record for an artwork.</li>
+            <li>Zimbabwe National Army troops seize control of Harare and place President Robert Mugabe under house arrest.</li>
+            <li>Borut Pahor is re-elected President of Slovenia.</li>
+            <li>An earthquake strikes the border between Iraq and Iran, killing at least 540 people and injuring more than 8,000 others.</li>
+            <li>The Paradise Papers—more than 13 million financial documents relating to offshore investment—are leaked.</li>
           </ul>
+          <p>Recent deaths: Bobby Doerr Thomas Hudner Edith Savage-Jennings Liz Smith</p>
+          <p>Other recent events Nominate an article</p>
           <h4 class="subheader">On this day...</h4>
           <h6>November 16th</h6>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1476 – With the help of Stephen the Great and Stephen V Báthory, Vlad the Impaler became the ruler of Wallachia for the third time after forcing Basarab Laiotă to flee to the Ottoman Empire.</li>
+            <li>1776 – American Revolutionary War: British and Hessian units captured Fort Washington from the Patriots.
+            </li>
+            <li>1967 – Aeroflot Flight 2230 crashed after takeoff from Koltsovo Airport, Sverdlovsk (now Yekaterinburg), killing all 107 people aboard.</li>
+            <li>1992 – In Suffolk, England, a local man found the largest hoard of Roman silver and gold in Britain (sample pictured), including the largest collection of 4th/5th-century gold and silver coins ever discovered within the former Roman Empire.</li>
+            <li>1997 – Chinese dissident Wei Jingsheng was released for "medical reasons" after spending 17½ of the previous 18 years in prison, and was deported to the United States.</li>
           </ul>
+          <p>Ælfric of Abingdon (d. 1005) · Turibius of Mogrovejo (b. 1538) · Caroline Birley (b. 1851)
+          </p>
         </div>
       </div>
     </div>
